# seasonal-analysis

./: .gitignore  .python-version  README.md  config_assets.py  constants.py  load_data.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
docs/: example-mrci.md  for-server.md  mrci-method-emulation.md  scrapped-note-from-notion.md
docs/archived/: kpi-summary.md  list-of-methods.md  what-tradesurge-needs.md
seasonal/: __init__.py  analysis.py  config_assets.py  constants.py  load_data.py  seasonal.py  seasonal_filters.py
seasonal_analysis/: __init__.py  analysis.py  load_data.py  plotting.py  poi_charts.py
study/: (Build) Seasonal Forex.ipynb  (Build) Seasonal Forex.py  (Build) Seasonal Futures.ipynb  (Build) Seasonal Futures.py  run_seasonal_pipeline.py  seasonal-notebook-debug.py  test_run_seasonal.py
