[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "seasonal-analysis"
version = "0.1.0"
description = "Seasonal pattern analysis utilities for trading"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "matplotlib>=3.6.0",
    "trading_utils",
    "pandas_market_calendars>=4.0.0",
]

# We rely on inline type hints and py.typed in the `seasonal` package.
keywords = ["seasonality", "trading", "analytics"]

[tool.setuptools]
# Explicitly include only the seasonal_analysis package, excluding study/data/results directories
packages = ["seasonal_analysis"]

[tool.setuptools.package-data]
# Include py.typed marker for PEP 561 typed package support
seasonal_analysis = ["py.typed"]

